# volriot

./: .eslintrc.json  index.html  package.json  tsconfig.json  vite.config.ts
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  rustfmt.toml  tauri.conf.json
src-tauri/bindings/: ReadStorageData.ts  RedisConnection.ts  Theme.ts  UserPreferences.ts  WriteStorageData.ts
src-tauri/src/: error.rs  main.rs  redis.rs  storage.rs  user_preferences.rs
src/components/: Button.tsx  ConnectionModal.tsx  Connections.tsx  Menu.tsx  Modal.tsx
src/components/Connections/: index.tsx
src/components/Form/: Input.tsx
src/contexts/theme/: Context.tsx  useTheme.ts
src/hooks/: useLocalStorage.ts  useResizable.ts  useTheme.ts
