[package]
authors = ["vinicius98s"]
build = "src/build.rs"
default-run = "volriot"
description = "A Tauri App"
edition = "2018"
license = "MIT"
name = "volriot"
repository = "https://github.com/vinicius98s/volriot"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = {version = "1.0.0-beta.4"}

[dependencies]
redis = "0.21.2"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
tauri = {version = "1.0.0-beta.8", features = ["api-all"]}
ts-rs = "6.1"
