[package]
authors = ["vinicius98s"]
build = "src/build.rs"
default-run = "volriot"
description = "A Tauri App"
edition = "2018"
license = "MIT"
name = "volriot"
repository = "https://github.com/vinicius98s/volriot"
version = "0.1.0"

[build-dependencies]
tauri-build = {version = "1.0.0-beta.4"}

[dependencies]
bincode = "1.3.3"
redis = "0.21.2"
serde = {version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = {git = "https://github.com/tauri-apps/tauri/", branch = "next", features = ["api-all"] }
tauri-plugin-window-state = {git = "https://github.com/tauri-apps/tauri-plugin-window-state"}
thiserror = "1.0.30"
ts-rs = "6.1"
